vocativ-darknet-microsite/client/styles/episodeslibrary.scss
@import "shared";

$headerDividerColor: $DARKISHGRAY;

.episodes-library {
  width: 100%;

  .header {
    @include bottom-divider($headerDividerColor, 1.5rem);
  }

  .episodes {
    width: 100%;

    // on mobile - one episode per row (that's the default settings)
    // on tablet - two episodes per row
    @include bp-under(breakpoint(large)) {
      max-width: 2 * $gridImageWidth + $gridGutterWidth;
      margin: auto;
    }

    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;

    .library-episode {
      flex: 1 0 100%;

      @include respond-to(medium) {
        max-width: $gridImageWidth;
      }

      position: relative;
      display: flex;
      flex-direction: column;

      margin-bottom: 2.5rem;

      .image {
        position: relative;
        // width: $imageWidth;
        height: $gridImageHeight;

        margin-bottom: 0.5rem;

        img {
          @include fill-parent;
          object-fit: cover;
        }

        .coming-soon-text {
          display: none;
        }
      }

      .name {
        margin: 0.5rem 0;
        font-size: 1.2rem;
        @include upper;
      }

      .synopsis {
        margin-top: 0.5rem;
        line-height: 1.4rem;
      }

      // Coming soon overlay text
      &.coming-soon {
        .image {
          opacity: 0.5;

          .coming-soon-text {
            @include dim(100%);
            @include pin-top-left;
            @include flex-center;

            font-size: 2.5em;
          }
        }
      }
    }
  }
}

